# risc-v-emulator

./: Cargo.toml
src/: assembler.rs  helpers.rs  main.rs
test-files/: program-1.rsv  program-2.rsv  program-3.rsv  program-4.rsv  program-5.rsv  program-6.rsv  program-7.rsv  program-8.rsv
