[package]
name = "risc-v-emulator"
version = "0.1.0"
authors = ["DangerFunPants <alexander.james@ucalgary.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] 
lalrpop = {version = "0.19.0", features = ["lexer"]}

[dependencies]
nom = "5"

lalrpop-util = "0.19.0"
regex = "1"
